# RAG-Demo

./: .gitignore  README.md  about_this_documentation.html  documents.html  genindex.html  getting_started.html  index.html  initialization.html  initialization.logger_control.html  initialization.system_information.html  llm.html  main.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: sync-files.yml
_modules/: index.html  main.html
_modules/documents/: load_docs.html  process_docs.html
_modules/initialization/: logger_control.html  system_information.html
_modules/llm/: load_llm.html
_modules/vectorStore/: embeddings.html
_sources/: documents.rst.txt  index.md.txt  initialization.logger_control.rst.txt  initialization.rst.txt  modules.rst.txt
docs/source/: conf.py  initialization.system_information.rst  modules.rst
scripts/: entrypoint.py
src/: main.py
src/documents/: __init__.py  load_docs.py  process_docs.py
src/initialization/: __init__.py  logger_control.py  system_information.py
src/llm/: __init__.py  load_llm.py  promp.py
src/vectorStore/: __init__.py  embeddings.py  vs.py
