[project]
name = "python-project-template"
version = "0.1.0"
description = "A reusable Python project template with modern development tools and automated documentation"
authors = [
    {name = "Brayan Camilo Valenzuela Rincon"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sphinx (>=8.2.3,<9.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "myst-parser (>=4.0.1,<5.0.0)",
    "furo (>=2024.8.6,<2025.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false